<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingLeft="20dp"
    android:paddingTop="16dp"
    android:paddingRight="20dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/llNombre"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/llFecha"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/llNombre">

            <EditText
                android:id="@+id/etFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/Fecha" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/llTelefono"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/llFecha">

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefono" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/llTelefono">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/llDescripcion"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/llEmail">

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/descripcion" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/llBoton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llDescripcion">

            <Button
                android:id="@+id/bt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:theme="@style/MiBotonRaised" />
        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>